# game-host-adapter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game-host-adapter-ubuntu-20.04.nuspec.in  game-host-adapter-ubuntu-22.04.nuspec.in  game-host-adapter-windows-x64.nuspec.in  player_stats_overrides.md  requirements.txt  test_a2s.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
docs/: doxygen.cfg  generate.bash  serve.bash
docs/astromd/: a2s_8hpp.md  a2s_8hpp.xml.md  c__api_8h.md  c__api_8h.xml.md  c__metrics_8h.md  c__metrics_8h.xml.md  c__platform_8h.md  c__platform_8h.xml.md  c__status_8h.md  c__status_8h.xml.md  classrallyhere_1_1Status.md  classrallyhere_1_1Status.xml.md  dir_76796dd7592be59ace9832d84b42ef5c.md  dir_76796dd7592be59ace9832d84b42ef5c.xml.md  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad.md  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad.xml.md  dir_a151cabc5e4ffa3b0dad64ed99c1ba02.md  dir_a151cabc5e4ffa3b0dad64ed99c1ba02.xml.md  dir_d6247cb30ad01aa73b1d675218087d11.md  dir_d6247cb30ad01aa73b1d675218087d11.xml.md  index.xml.md  indexpage.md  indexpage.xml.md  namespacefmt.md  namespacefmt.xml.md  namespacerallyhere.md  namespacerallyhere.xml.md  namespacerallyhere_1_1allocator.md  namespacerallyhere_1_1allocator.xml.md  rh__allocator_8h.md  rh__allocator_8h.xml.md  rh__format_8h.md  rh__format_8h.xml.md  rh__status_8h.md  rh__status_8h.xml.md  rh__string_8h.md  rh__string_8h.xml.md  rh__string__map__wrapper_8hpp.md  rh__string__map__wrapper_8hpp.xml.md  rh__vector_8h.md  (+42 more)
docs/html/: a2s_8hpp.html  a2s_8hpp__incl.map  a2s_8hpp__incl.md5  a2s_8hpp_source.html  annotated.html  c__api_8h.html  c__api_8h__dep__incl.map  c__api_8h__dep__incl.md5  c__api_8h__incl.map  c__api_8h__incl.md5  c__api_8h_source.html  c__metrics_8h.html  c__metrics_8h__dep__incl.map  c__metrics_8h__dep__incl.md5  c__metrics_8h_source.html  c__platform_8h.html  c__platform_8h__dep__incl.map  c__platform_8h__dep__incl.md5  c__platform_8h_source.html  c__status_8h.html  c__status_8h__dep__incl.map  c__status_8h__dep__incl.md5  c__status_8h__incl.map  c__status_8h__incl.md5  c__status_8h_source.html  classes.html  classrallyhere_1_1Status-members.html  classrallyhere_1_1Status.html  dir_000002_000001.html  dir_000003_000002.html  dir_76796dd7592be59ace9832d84b42ef5c.html  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad.html  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad_dep.map  dir_a151cabc5e4ffa3b0dad64ed99c1ba02.html  dir_a151cabc5e4ffa3b0dad64ed99c1ba02_dep.map  dir_a151cabc5e4ffa3b0dad64ed99c1ba02_dep.md5  dir_b82ac779258f73c127f927533d8d7a8f.html  dir_b82ac779258f73c127f927533d8d7a8f_dep.map  dir_b82ac779258f73c127f927533d8d7a8f_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  (+106 more)
docs/latex/: a2s_8hpp.tex  a2s_8hpp__incl.md5  annotated.tex  c__api_8h.tex  c__api_8h__dep__incl.md5  c__api_8h__incl.md5  c__metrics_8h.tex  c__metrics_8h__dep__incl.md5  c__platform_8h.tex  c__platform_8h__dep__incl.md5  c__status_8h.tex  c__status_8h__dep__incl.md5  c__status_8h__incl.md5  classrallyhere_1_1Status.tex  dir_76796dd7592be59ace9832d84b42ef5c.tex  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad.tex  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad_dep.md5  dir_a151cabc5e4ffa3b0dad64ed99c1ba02.tex  dir_b82ac779258f73c127f927533d8d7a8f.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d6247cb30ad01aa73b1d675218087d11.tex  dir_d6247cb30ad01aa73b1d675218087d11_dep.md5  dir_f14d3b8e4f0d33cf7ca6f8bde0a24c9e.tex  files.tex  index.tex  namespacerallyhere.tex  namespacerallyhere_1_1allocator.tex  namespaces.tex  refman.tex  rh__allocator_8h.tex  rh__allocator_8h__dep__incl.md5  rh__format_8h.tex  rh__format_8h__dep__incl.md5  rh__format_8h__incl.md5  rh__status_8h.tex  rh__status_8h__incl.md5  rh__string_8h.tex  rh__string_8h__dep__incl.md5  rh__string_8h__incl.md5  rh__string__map__wrapper_8hpp.tex  (+29 more)
docs/md/: a2s_8hpp.xml.md  c__api_8h.xml.md  c__metrics_8h.xml.md  c__platform_8h.xml.md  c__status_8h.xml.md  classrallyhere_1_1Status.xml.md  dir_76796dd7592be59ace9832d84b42ef5c.xml.md  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad.xml.md  dir_a151cabc5e4ffa3b0dad64ed99c1ba02.xml.md  dir_d6247cb30ad01aa73b1d675218087d11.xml.md  index.xml.md  indexpage.xml.md  namespacefmt.xml.md  namespacerallyhere.xml.md  namespacerallyhere_1_1allocator.xml.md  rh__allocator_8h.xml.md  rh__format_8h.xml.md  rh__status_8h.xml.md  rh__string_8h.xml.md  rh__string__map__wrapper_8hpp.xml.md  rh__vector_8h.xml.md  sdk__formatters_8hpp.xml.md  structRallyHereGameInstanceAdapter.xml.md  structRallyHereMetricAction.xml.md  structRallyHereMetricActionIncrement.xml.md  structRallyHereMetricActionIncrementWithSample.xml.md  structRallyHereMetricActionSet.xml.md  structRallyHereMetricActionSetWithSample.xml.md  structRallyHereMetricActionUnique.xml.md  structRallyHereMetricCheckpoint.xml.md  structRallyHereMetricDefinition.xml.md  structRallyHereStatsBase.xml.md  structRallyHereStatsBaseProvided.xml.md  structRallyHereStringMap.xml.md  structRallyHereStringMapWrapper.xml.md  structfmt_1_1formatter_3_01boost_1_1system_1_1error__code_01_4.xml.md  structfmt_1_1formatter_3_01http_1_1request_3_01rallyhere_1_1string__body_01_4_01_4.xml.md  structfmt_1_1formatter_3_01http_1_1response_3_01rallyhere_1_1string__body_01_4_01_4.xml.md  structrallyhere_1_1A2SDatagram.xml.md  structrallyhere_1_1a2s__simple__response.xml.md  (+1 more)
docs/xml/: a2s_8hpp.xml  c__api_8h.xml  c__metrics_8h.xml  c__platform_8h.xml  c__status_8h.xml  classrallyhere_1_1Status.xml  dir_76796dd7592be59ace9832d84b42ef5c.xml  dir_7f36b0542863d9ea4a2c8f6fbed0b7ad.xml  dir_a151cabc5e4ffa3b0dad64ed99c1ba02.xml  dir_b82ac779258f73c127f927533d8d7a8f.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_d6247cb30ad01aa73b1d675218087d11.xml  dir_f14d3b8e4f0d33cf7ca6f8bde0a24c9e.xml  index.xml  indexpage.xml  namespacefmt.xml  namespacerallyhere.xml  namespacerallyhere_1_1allocator.xml  rh__allocator_8h.xml  rh__format_8h.xml  rh__status_8h.xml  rh__string_8h.xml  rh__string__map__wrapper_8hpp.xml  rh__vector_8h.xml  sdk__formatters_8hpp.xml  structRallyHereGameInstanceAdapter.xml  structRallyHereMetricAction.xml  (+18 more)
(+166 files in other folders)
